# cullis

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  admin.py  agent.sh  alembic.ini  bootstrap.py  commands.md  cript_messages.md  cullis-connector.spec  deploy.sh  deploy_broker.sh  deploy_proxy.sh  docker-compose.prod.yml  docker-compose.proxy.standalone.yml  docker-compose.proxy.yml  docker-compose.yml  flusso_policy.md  generate_certs.py  generate_demo_certs.py  join.py  join_agent.py  mcp_proxy.md  package.json  payments.md  pdp-rules.json  policy.py  progress.md  project_tree.txt  proxy.env.example  pyproject.toml  (+14 more)
.circleci/: config.yml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  cullis-chat.yml  customer-path-smoke.yml  dco.yml  helm-test.yml  nixos-tests.yml  release-chat.yml  release-connector.yml  release-court.yml  release-frontdesk-bundle.yml  release-mastio-enterprise-bundle.yml  release-mastio.yml  release-proxy.yml  release-sdk.yml  smoke.yml
agents/: DEMO.md  banca_a.env  banca_b.env  buyer.env  buyer.py  client.py  manufacturer.env  manufacturer.py  mock_pdp.py  sdk.py
alembic/: env.py
alembic/versions/: 3ee228696375_add_client_seq_to_session_messages.py  473ecda4a4ca_initial_schema.py  7043c1ddb652_add_oidc_columns_to_organizations.py  a1b2c3d4e5f7_add_org_trust_domain.py  a7b8c9d0e1f2_add_federation_events.py  e5f6a7b8c9d0_add_proxy_message_queue.py  f6a7b8c9d0e1_audit_chain_per_org.py  g7b8c9d0e1f2_add_org_mastio_pubkey.py  h8c9d0e1f2a3_add_org_sealed.py  j0e1f2a3b4c5_add_org_sealed.py  l2g3b4c5d6e7_audit_principal_type.py  m3h4i5j6k7l8_reach_consents.py  p6k7l8m9n0o1_org_require_mtls.py  q7l8m9n0o1p2_audit_append_only.py  q7l8m9n0o1p2_org_mastio_url.py  r8m9n0o1p2q3_audit_append_only.py  (+3 more)
app/: README.md  config.py  e2e_crypto.py  license.py  main.py  plugins.py  spiffe.py  telemetry.py  telemetry_metrics.py
app/auth/: dpop.py  (+12 more)
cullis_connector/: README.md  __init__.py  __main__.py  _atomic_write.py  _http_safety.py  _logging.py  _port_check.py  autostart.py  cli.py  config.py  desktop_app.py  discovery.py  doctor.py  enrollment.py  inbox_dispatcher.py  inbox_poller.py  login.py  profile.py  server.py  setup_auth.py  state.py  web.py
cullis_sdk/: README.md  __init__.py  _b64url.py  auth.py  client.py  dpop.py  mcp_server.py  oidc.py  spiffe.py
demo/: PRODUCTION_REMINDER.md  buyer_agent.py  create_policies.py  demo_commands.md  generate_org_certs.py  inventory.json  inventory_watcher.py  result_BLT-M10-ZN.json  result_BLT-M8-ZN.json  supplier_agent.py
demo_network/: compose.postgres.yml  compose.yml  postgres-init.sh  smoke.sh  standalone.compose.yml  standalone_smoke.sh  verify_audit_chain.py
docs/: index.html  k8s-quickstart.md  operations-runbook.md  ops-runbook.md  spiffe-onboarding.md
drafts/: draft-hartman-credential-broker-4-agents-00.md  draft-klrc-aiagent-auth-01.md  wimse.md
enterprise-kit/: BYOCA.md  LICENSE  compliance-posture.md  docker-compose.agent.yml  intune-setup.md  quickstart.sh  runbook-attestation-revocation.md
enterprise-lab/: bootstrap.sh  verify.sh
enterprise_sandbox/: GUIDE.md  demo.sh  docker-compose.yml  down.sh  smoke.sh
files/: claude-project-instructions.md
imp/: c2-a1b-run3-batched-2026-05-16.md  c2-a1c-local-pyspy-2026-05-17.md  c2-run4-local-postmerge-2026-05-17.md  connector_login_challenge_response_design.md
mcp_proxy/: Dockerfile  Dockerfile.pdp  README.md  _http_safety.py  _lifespan_log.py  audit_chain.py  config.py  db.py  db_models.py  license.py  main.py  models.py  plugins.py  rbac.py  requirements-proxy.txt  spiffe.py  telemetry_metrics.py  version_check.py
miglioramenti/: A2A_example.txt  changelog.md  enterprise_guide.txt  readmeV2.md  status.md
nginx/: generate_tls_cert.sh  nginx.conf
packaging/: RELEASING.md  _common-deploy-helpers.sh  smoke-customer-path.sh  test-bundle-backup-symmetry.sh
packaging/pypi/: .gitignore  README.md  build.sh  pyproject.toml
packaging/pypi-sdk/: pyproject.toml
reference/: README.md  docker-compose.yml  smoke.sh
repository/: ARCHITECTURE.md  README.md  architecture.md
sandbox/: GUIDE.md  README.md  demo-postgres.sh  demo.sh  docker-compose.yml  dogfood-frontdesk-wizard.sh  dogfood-frontdesk.sh  mcp-server.Dockerfile  smoke.sh  up.sh
scripts/: build-spa.sh  build_frontend.sh  cullis-audit-verify.py  generate-proxy-env.sh  pg-backup.sh  pg-restore.sh  tailwind-sha256.txt
sdk-ts/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
showcase/: 07-demo-bootstrap.md  07-demo-broker.md  07-demo-buyer.md  07-demo-manufacturer.md  08-demo-brooker.md  08-demo-certs.md  08-demo-join.md  PITCH_DECK.md  PRESENTATION.md
site/: DEPLOYMENT.md  README.md  astro.config.mjs  package-lock.json  package.json
stack/: GUIDE.md  demo.sh  docker-compose.yml  down.sh  smoke.sh  up.sh
tests/: _mtls_helpers.py  _token_test_helpers.py  cert_factory.py  conftest.py  test_admin_agents.py  test_admin_api_tokens.py  test_admin_enroll_byoca.py  test_admin_enroll_spiffe.py  test_admin_reactivate.py  test_admin_users.py  test_admin_users_password.py  test_admin_workloads.py  test_adr009_phase1_countersig.py  test_adr009_phase1_mastio_pubkey.py  test_adr009_phase2_patch_mastio_pubkey.py  test_adr009_phase2_proxy_login.py  test_agent_cert_rotation_grace.py  test_ai_gateway_multi_provider.py  test_ai_providers_admin.py  test_api_token_resolver.py  test_approval_hook.py  test_attestation_tier_mapping.py  test_attestation_tier_mapping_hw.py  test_audit_api.py  test_audit_chain.py  test_audit_chain_batched.py  test_audit_device_attestation_event.py  test_audit_dpop_jkt.py  test_audit_export.py  test_audit_export_tsa.py  test_audit_fail_deny.py  test_audit_on_behalf_of_user.py  test_audit_oneshot_envelope_integrity.py  test_audit_r2_t1.py  test_audit_r2_t2.py  test_audit_r2_t3.py  test_audit_r3.py  test_audit_race_safety.py  test_audit_tsa.py  test_audit_tsa_verify.py  (+278 more)
vault/: config.hcl  init-vault.sh
(+834 files in other folders)
