[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cullis-agent-sdk"
version = "0.1.0"
description = "Python SDK for Cullis — federated agent trust broker"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "PyJWT[crypto]>=2.8.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
connector = [
    "mcp>=1.0",
    "PyYAML>=6.0",
]
spiffe = [
    "spiffe>=0.2.0",
]

[project.scripts]
cullis-connector = "cullis_connector.cli:main"
cullis-proxy = "mcp_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cullis_sdk", "cullis_connector"]
