[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cullis-agent-sdk"
version = "0.1.0"
description = "Python SDK for Cullis — federated agent trust broker"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "PyJWT[crypto]>=2.8.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
connector = [
    "mcp>=1.0",
    "PyYAML>=6.0",
    "bcrypt>=4.0",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # OS-native desktop notifications for the inbox poller.
    # plyer is a thin wrapper around libnotify (Linux), NSUserNotification
    # (macOS) and Windows Toast — falls back to stderr when missing so
    # `connector` deploys without `dashboard` keep working.
    "plyer>=2.1",
]
# Native desktop shell: tray icon + system webview wrapping the
# dashboard so non-technical users never see a terminal. Builds on
# top of `dashboard` — keep both installed together.
#   pywebview: embeds the OS-native webview (Cocoa WebKit, WebView2,
#              GTK WebKit) pointed at http://127.0.0.1:7777.
#   pystray : system-tray icon with a minimal menu (Open / Quit).
#   Pillow  : drawing surface for the tray glyph (we render the
#             portcullis mark at runtime, no PNG assets to ship).
# Platform prerequisites not installable via pip: on Linux the user
# still needs `gtk3` + `webkit2gtk` (present by default on mainstream
# distros); macOS and Windows 10+ ship the webview in the OS.
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]
spiffe = [
    "spiffe>=0.2.0",
]

[project.scripts]
cullis-connector = "cullis_connector.cli:main"
cullis-proxy = "mcp_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cullis_sdk", "cullis_connector"]

[tool.hatch.build.targets.wheel.shared-data]
# Ship the dashboard templates + static assets alongside the Python code.
# Without this the PyInstaller bundle (Day 3) misses Jinja templates and
# the pip install misses the stylesheet.

[tool.hatch.build.targets.wheel.force-include]
"cullis_connector/templates" = "cullis_connector/templates"
"cullis_connector/static" = "cullis_connector/static"
